--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@prisma/client": "^5.13.0",
+        "@prisma/client": "^5.22.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
+        "express": "^4.21.2",
+        "express-rate-limit": "^7.5.1",
+        "helmet": "^8.1.0",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.0"
+        "swagger-ui-express": "^5.0.0",
+        "zod": "^3.25.75"
     },
     "devDependencies": {
-        "@types/express": "^4.17.9",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^4.17.23",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.10",
         "@types/supertest": "^6.0.2",
@@ -32,7 +37,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "prettier": "^3.2.5",
-        "prisma": "^5.13.0",
+        "prisma": "^5.22.0",
         "supertest": "^7.0.0",
         "ts-jest": "^29.1.2",
         "ts-node": "^9.1.1",
